--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,3 +11,8 @@ vscode:
     - eventyret.bootstrap-4-cdn-snippet
     - hookyqr.beautify
     - matt-rudge.auto-open-preview-panel
+    - ms-toolsai.jupyter
+    - ms-toolsai.jupyter-keymap
+    - ms-toolsai.jupyter-renderers
+    - ms-toolsai.vscode-jupyter-cell-tags
+    - ms-toolsai.vscode-jupyter-slideshow
